--- a/firmware/stm32cube/stm32cube.ioc
+++ b/firmware/stm32cube/stm32cube.ioc
@@ -174,7 +174,7 @@ RCC.CortexFreq_Value=160000000
 RCC.DACFreq_Value=32000
 RCC.EPOD_VALUE=16000000
 RCC.FCLKCortexFreq_Value=160000000
-RCC.FDCANFreq_Value=160000000
+RCC.FDCANFreq_Value=80000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=160000000
 RCC.HSE_VALUE=16000000
@@ -186,16 +186,18 @@ RCC.I2C3Freq_Value=160000000
 RCC.I2C4Freq_Value=160000000
 RCC.I2C5Freq_Value=160000000
 RCC.I2C6Freq_Value=160000000
-RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2C5Freq_Value,I2C6Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAESFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBPHYCLockSelection,USBPHYFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2C5Freq_Value,I2C6Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLL1R,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAESFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBPHYCLockSelection,USBPHYFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
 RCC.LPTIM2Freq_Value=160000000
 RCC.LPUART1Freq_Value=160000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSIDIV_VALUE=32000
 RCC.LSI_VALUE=32000
+RCC.LockedElements=PLLFRACN
 RCC.MCO1PinFreq_Value=160000000
 RCC.MDF1Freq_Value=160000000
 RCC.MSI_VALUE=4000000
 RCC.OCTOSPIMFreq_Value=160000000
+RCC.PLL1R=1
 RCC.PLL2PoutputFreq_Value=258000000
 RCC.PLL2QoutputFreq_Value=258000000
 RCC.PLL2RoutputFreq_Value=258000000
@@ -203,17 +205,16 @@ RCC.PLL3PoutputFreq_Value=258000000
 RCC.PLL3QoutputFreq_Value=258000000
 RCC.PLL3RoutputFreq_Value=258000000
 RCC.PLLFRACN=0
-RCC.PLLM=4
-RCC.PLLN=80
-RCC.PLLPoutputFreq_Value=160000000
-RCC.PLLQoutputFreq_Value=160000000
+RCC.PLLN=10
+RCC.PLLPoutputFreq_Value=80000000
+RCC.PLLQoutputFreq_Value=80000000
 RCC.PLLRCLKFreq_Value=160000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RNGFreq_Value=48000000
 RCC.SAESFreq_Value=48000000
 RCC.SAI1Freq_Value=258000000
 RCC.SAI2Freq_Value=258000000
-RCC.SDMMCFreq_Value=160000000
+RCC.SDMMCFreq_Value=80000000
 RCC.SPI1Freq_Value=160000000
 RCC.SPI2Freq_Value=160000000
 RCC.SPI3Freq_Value=160000000
@@ -229,8 +230,8 @@ RCC.USBPHYCLockSelection=RCC_USBPHYCLKSOURCE_HSE
 RCC.USBPHYFreq_Value=16000000
 RCC.VCOInput2Freq_Value=4000000
 RCC.VCOInput3Freq_Value=4000000
-RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=320000000
+RCC.VCOInputFreq_Value=16000000
+RCC.VCOOutputFreq_Value=160000000
 RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
 USART1.IPParameters=VirtualMode-Asynchronous
